# substrate-pallet-rbac

./: Cargo.toml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs
pallets/rbac/: Cargo.toml  README.md
pallets/rbac/src/: benchmarking.rs  extension.rs  lib.rs  mock.rs  primitives.rs  tests.rs  tests_utils.rs  traits.rs  weights.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: extensions.rs  lib.rs  primitives.rs
